fix some problem

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: P_Chou Tech Space
   </li>
   {% endif %}
   
-  <li>
+  <li class="hidden-xs">
     <span class="page_number">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
   </li>
 
@@ -89,7 +89,7 @@ title: P_Chou Tech Space
   </li>
   {% endif %}
   
-  <li>
+  <li class="hidden-xs">
     <span class="page_number">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
   </li>
 
