--- a/404.html
+++ b/404.html
@@ -16,6 +16,8 @@ layout: page
     }
   </style>
 
+<p>由于博客内容进行了新的规划，如果您在寻找某个系列的教程，请检索左侧的系列教程快速入口</p>
+
   <pre>
 
                        444444444       000000000            444444444   
